# mobius3

./: .codeclimate.yml  .coveragerc  .pre-commit-config.yaml  Dockerfile  Dockerfile-ecs-credentials  Dockerfile-minio  Dockerfile-test  LICENSE  README.md  docker-compose.yml  ecs-credentials.py  minio-entrypoint.sh  mobius3.py  pyproject.toml  requirements.txt  setup.py  test.py  test_with_coverage.sh
.circleci/: config.yml
.github/workflows/: deploy-package-to-pypi.yml
